fix overflow

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a {
   display: none;
   padding: 1px;
   position: absolute;
-  left: -100% !important;
+  left: -50% !important;
   top: 1rem !important;
   z-index: 1000;
   border-radius: 6px;
@@ -263,8 +263,9 @@ main {
 }
 .basic-controls {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   gap: 0.6rem;
+  max-width: 100%;
 }
 
 .basic-controls > p {
